# thalassian

./: README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: static.yml
data/: lexicon.json
docs/: citations.md  index.html  index.md
docs/methodology/: grammar.md  how-to-use-portal.md  lexicon.md  typography.md
scripts/: analyzer.py  combiner.py  grammar.py  grammar_en.py  grammar_nlp.py  scraper_wowhead.py  test_grammar.py  translator.py
src/thalassian/cli/: main.py
src/thalassian/core/: lexicon.py
src/thalassian/data/: lexicon.json
src/thalassian/morphology/: agglutination.py  pluralization.py
src/thalassian/phonetics/: markov.py
src/thalassian/syntax/: parser.py
tests/test_syntax/: test_ast.py  test_parser.py
web/: CNAME  dictionary.html  index.html  tree.html
